update js file & html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
   <div class="card">
-    <h2>🌊 Aare River Temperature</h2>
-    <!-- Placeholder for temperature and status message -->
-    <div id="output" class="loading">Loading...</div>
+    <h1><img src="ic-weather-wind.svg" alt="icon" title="Windy"> Current Weather in Bern</h1>
+    <pre id="weather-output">Loading...</pre>
   </div>
 
   <!-- Link to external JavaScript file -->
