--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 
   <!-- Link to external JavaScript file -->
   <script src="script.js"></script>
+
+  <div class="rain"></div>
+  <script src="scriptRain.js"></script>
+
 </body>
 </html>
